--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Library</title>
 </head>
 <body>
+    <button id="showDialog">New Book</button>
+
+    <dialog>
+        <form class="bookForm">
+            <label for="title">Title</label>
+            <input type="text" id="title" required>
+            <label for="author">Author</label>
+            <input type="text" id="author" required>
+            <label for="pages">Pages</label>
+            <input type="number" id="pages" required>
+            <label for="read">Read</label>
+            <input type="checkbox" id="read">
+            <button type="submit" id="submitBtn">Submit</button>
+        </form>
+    </dialog>
+
+    <div class="library"></div>
     
     <script src="script.js"></script>
 </body>
